[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scenes/Label.gd" type="Script" id=1]
[ext_resource path="res://scripts/gui/EditorItem.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Previews/ItemPanel/ThickPlatform.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/gui/SelectedItem.gd" type="Script" id=4]
[ext_resource path="res://scripts/gui/PolygonRotate.gd" type="Script" id=5]
[ext_resource path="res://res/fonts/Aileron-Bold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/UI/Previews/ItemPanel/Iceman.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/fonts/Inter-SemiBold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://res/fonts/Rubik-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://res/fonts/aileron_bold_outline.tres" type="DynamicFont" id=10]
[ext_resource path="res://res/txrs/editor/up_arrow.png" type="Texture" id=11]
[ext_resource path="res://res/txrs/editor/down_arrow.png" type="Texture" id=12]
[ext_resource path="res://Scenes/UI/WhiteRoundFrame.tres" type="StyleBox" id=13]
[ext_resource path="res://Scenes/UI/DarkRoundFrame.tres" type="StyleBox" id=14]
[ext_resource path="res://Scenes/UI/WhiteRoundFrame_Pressed.tres" type="StyleBox" id=15]
[ext_resource path="res://Scenes/UI/WhiteRoundFrame_Hover.tres" type="StyleBox" id=16]
[ext_resource path="res://scripts/gui/LevelSelector.gd" type="Script" id=17]
[ext_resource path="res://src/UI/BuildInterface.cs" type="Script" id=18]
[ext_resource path="res://res/fonts/aileron_bold.tres" type="DynamicFont" id=19]
[ext_resource path="res://Scenes/UI/BlackButton.tres" type="StyleBox" id=20]
[ext_resource path="res://Scenes/UI/Previews/ItemPanel/ThickWall.tscn" type="PackedScene" id=21]

[sub_resource type="DynamicFont" id=19]
size = 72
outline_size = 5
outline_color = Color( 0, 0, 0, 0.584314 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 0.133333 )
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 28
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
size = 78
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.564706 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.156863 )
shadow_size = 6
shadow_offset = Vector2( 0, 4 )

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="ProceduralSky" id=2]
ground_bottom_color = Color( 0.294118, 0.517647, 0.741176, 1 )
ground_horizon_color = Color( 0.443137, 0.698039, 0.764706, 1 )
sun_latitude = 23.23
sun_longitude = 120.0

[sub_resource type="Environment" id=3]
background_sky = SubResource( 2 )
background_color = Color( 0.54902, 0.54902, 0.54902, 0.0470588 )
ambient_light_color = Color( 0.819608, 0.823529, 0.819608, 1 )
tonemap_mode = 1
tonemap_exposure = 0.9
ssao_enabled = true
ssao_radius = 0.8
ssao_intensity = 2.0
ssao_radius2 = 1.6
ssao_color = Color( 0.223529, 0.223529, 0.223529, 1 )
ssao_blur = 2
dof_blur_far_distance = 0.58
dof_blur_far_transition = 14.25
dof_blur_near_distance = 3.64
glow_enabled = true
glow_levels/4 = true
glow_levels/5 = false
glow_intensity = 0.39
glow_strength = 0.83
glow_hdr_threshold = 0.7
glow_bicubic_upscale = true

[sub_resource type="World" id=27]
environment = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=34]

[sub_resource type="ProceduralSky" id=40]
ground_bottom_color = Color( 0.294118, 0.517647, 0.741176, 1 )
ground_horizon_color = Color( 0.443137, 0.698039, 0.764706, 1 )
sun_latitude = 23.23
sun_longitude = 120.0

[sub_resource type="Environment" id=41]
background_sky = SubResource( 40 )
background_color = Color( 0.54902, 0.54902, 0.54902, 0.0470588 )
ambient_light_color = Color( 0.819608, 0.823529, 0.819608, 1 )
tonemap_mode = 1
tonemap_exposure = 0.9
ssao_enabled = true
ssao_radius = 0.8
ssao_intensity = 2.0
ssao_radius2 = 1.6
ssao_color = Color( 0.223529, 0.223529, 0.223529, 1 )
ssao_blur = 2
dof_blur_far_distance = 0.58
dof_blur_far_transition = 14.25
dof_blur_near_distance = 3.64
glow_enabled = true
glow_levels/4 = true
glow_levels/5 = false
glow_intensity = 0.39
glow_strength = 0.83
glow_hdr_threshold = 0.7
glow_bicubic_upscale = true

[sub_resource type="World" id=28]
environment = SubResource( 41 )

[sub_resource type="StyleBoxEmpty" id=35]

[sub_resource type="World" id=31]
environment = SubResource( 41 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0, 0, 0, 0.564706 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 20.0
expand_margin_right = 20.0
shadow_color = Color( 0, 0, 0, 0.0627451 )
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.309804, 0.309804, 0.309804, 0.564706 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 20.0
expand_margin_right = 20.0
shadow_color = Color( 0, 0, 0, 0.0627451 )
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxEmpty" id=37]

[node name="BuildUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 18 )

[node name="ItemSelected" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
script = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="ItemSelected"]
position = Vector2( -165, -164 )
scale = Vector2( 2.26946, 2.09677 )
color = Color( 1, 1, 1, 0.298039 )
offset = Vector2( -511.575, -114.462 )
polygon = PoolVector2Array( 666.238, 153.093, 507, 176, 575, 288, 681.66, 256.108 )
script = ExtResource( 5 )

[node name="Polygon2D2" type="Polygon2D" parent="ItemSelected"]
position = Vector2( -165, -164 )
scale = Vector2( 2.26946, 2.09677 )
color = Color( 1, 1, 1, 0.298039 )
offset = Vector2( -511.575, -114.462 )
polygon = PoolVector2Array( 684.304, 162.631, 511.575, 153.093, 550.792, 275.662, 668.441, 258.493 )
script = ExtResource( 5 )

[node name="Polygon2D3" type="Polygon2D" parent="ItemSelected"]
position = Vector2( -152, -37 )
scale = Vector2( 2.26946, 2.09677 )
color = Color( 1, 1, 1, 0.298039 )
polygon = PoolVector2Array( -6.60945, -10.4923, 139.681, -33.3848, 155.984, 93.954, -18.066, 102.062, -7.58138, -0.943726 )
script = ExtResource( 5 )

[node name="ItemName" type="RichTextLabel" parent="ItemSelected"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 86.0
margin_top = -106.0
margin_right = 422.0
margin_bottom = -11.0
custom_fonts/normal_font = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "[wave amp=30 freq=2] Platform[/wave]"
text = " Platform"
fit_content_height = true

[node name="ActionType" type="RichTextLabel" parent="ItemSelected"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 85.0
margin_top = -144.0
margin_right = 288.0
margin_bottom = -49.0
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "
[wave amp=20 freq=3] Selected[/wave]
"
text = "
 Selected
"

[node name="LevelSelector" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 175.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 14 )
script = ExtResource( 17 )

[node name="Label" type="Label" parent="LevelSelector"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5
margin_right = 24.5
margin_bottom = 21.0
custom_fonts/font = SubResource( 13 )
text = "LEVEL"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="LevelSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelector/MarginContainer"]
margin_right = 34.0
margin_bottom = 155.0
alignment = 1

[node name="Up" type="TextureButton" parent="LevelSelector/MarginContainer/VBoxContainer"]
modulate = Color( 0.921569, 0.921569, 0.960784, 1 )
margin_top = 21.0
margin_right = 34.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 30 )
texture_normal = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="LevelSelector/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 34.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 15 )
text = "1"
align = 1
valign = 1
clip_text = true
script = ExtResource( 1 )

[node name="Down" type="TextureButton" parent="LevelSelector/MarginContainer/VBoxContainer"]
modulate = Color( 0.921569, 0.921569, 0.960784, 1 )
margin_top = 104.0
margin_right = 34.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )
texture_normal = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 15.0
margin_top = 665.0
margin_right = 165.0
margin_bottom = 760.0
custom_fonts/font = SubResource( 16 )
text = "wall"

[node name="ItemPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = -164.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1
custom_styles/panel = SubResource( 26 )

[node name="GridContainer" type="GridContainer" parent="ItemPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1032.0
margin_bottom = 134.0
custom_constants/hseparation = 10
columns = 7

[node name="Item" type="Button" parent="ItemPanel/GridContainer"]
margin_right = 143.0
margin_bottom = 124.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = SubResource( 33 )
custom_styles/normal = ExtResource( 13 )
script = ExtResource( 2 )

[node name="ViewportContainer2" type="ViewportContainer" parent="ItemPanel/GridContainer/Item"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ItemPanel/GridContainer/Item/ViewportContainer2"]
size = Vector2( 143, 124 )
world = SubResource( 27 )
transparent_bg = true
handle_input_locally = false
usage = 3
debug_draw = 3
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ItemPanel/GridContainer/Item/ViewportContainer2/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.921789, 0.387693, 0, -0.387693, 0.921789, 0, 1.30977, 3.38549 )
fov = 22.0

[node name="Mesh" parent="ItemPanel/GridContainer/Item/ViewportContainer2/Viewport" instance=ExtResource( 21 )]

[node name="DirectionalLight" type="DirectionalLight" parent="ItemPanel/GridContainer/Item/ViewportContainer2/Viewport"]
transform = Transform( 0.551573, 0, 0.834127, 0, 1, 0, -0.834127, 0, 0.551573, 0, 0, -0.0118456 )
light_color = Color( 0.4, 0.384314, 0.384314, 1 )

[node name="Label" type="Label" parent="ItemPanel/GridContainer/Item"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 10 )
text = "Wall"
align = 1

[node name="Tween" type="Tween" parent="ItemPanel/GridContainer/Item"]

[node name="Item2" type="Button" parent="ItemPanel/GridContainer"]
margin_left = 153.0
margin_right = 296.0
margin_bottom = 124.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = SubResource( 34 )
custom_styles/normal = ExtResource( 13 )
script = ExtResource( 2 )

[node name="ViewportContainer2" type="ViewportContainer" parent="ItemPanel/GridContainer/Item2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ItemPanel/GridContainer/Item2/ViewportContainer2"]
size = Vector2( 143, 124 )
world = SubResource( 28 )
transparent_bg = true
handle_input_locally = false
usage = 3
debug_draw = 3
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ItemPanel/GridContainer/Item2/ViewportContainer2/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.921789, 0.387693, 0, -0.387693, 0.921789, 0, 1.30977, 3.38549 )
fov = 22.0

[node name="Mesh" parent="ItemPanel/GridContainer/Item2/ViewportContainer2/Viewport" instance=ExtResource( 3 )]

[node name="DirectionalLight" type="DirectionalLight" parent="ItemPanel/GridContainer/Item2/ViewportContainer2/Viewport"]
transform = Transform( 0.551573, 0, 0.834127, 0, 1, 0, -0.834127, 0, 0.551573, 0, 0, -0.0118456 )
light_color = Color( 0.4, 0.384314, 0.384314, 1 )

[node name="Label" type="Label" parent="ItemPanel/GridContainer/Item2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.5
margin_top = -29.0
margin_right = 36.5
margin_bottom = -6.0
custom_fonts/font = ExtResource( 10 )
text = "Platform"
align = 1

[node name="Item3" type="Button" parent="ItemPanel/GridContainer"]
margin_left = 306.0
margin_right = 449.0
margin_bottom = 124.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = ExtResource( 13 )
script = ExtResource( 2 )

[node name="ViewportContainer2" type="ViewportContainer" parent="ItemPanel/GridContainer/Item3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ItemPanel/GridContainer/Item3/ViewportContainer2"]
size = Vector2( 143, 124 )
world = SubResource( 31 )
transparent_bg = true
handle_input_locally = false
usage = 3
debug_draw = 3
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ItemPanel/GridContainer/Item3/ViewportContainer2/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.921789, 0.387693, 0, -0.387693, 0.921789, 0, 1.30977, 3.38549 )
fov = 22.0

[node name="Mesh" parent="ItemPanel/GridContainer/Item3/ViewportContainer2/Viewport" instance=ExtResource( 7 )]

[node name="DirectionalLight" type="DirectionalLight" parent="ItemPanel/GridContainer/Item3/ViewportContainer2/Viewport"]
transform = Transform( 0.551573, 0, 0.834127, 0, 1, 0, -0.834127, 0, 0.551573, 0, 0, -0.0118456 )
light_color = Color( 0.796078, 0.792157, 0.792157, 1 )

[node name="Label" type="Label" parent="ItemPanel/GridContainer/Item3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.5
margin_top = -29.0
margin_right = 36.5
margin_bottom = -6.0
custom_fonts/font = ExtResource( 10 )
text = "Iceman"
align = 1

[node name="ItemType" type="Control" parent="ItemPanel"]
margin_top = -50.0
margin_right = 549.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPanel/ItemType"]
margin_left = 20.0
margin_right = 104.0
margin_bottom = 40.0
custom_constants/separation = 50

[node name="Geometry" type="Button" parent="ItemPanel/ItemType/HBoxContainer"]
margin_right = 84.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 19 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 37 )
custom_styles/normal = ExtResource( 20 )
text = "Geometry"

[node name="Gameplay" type="Button" parent="ItemPanel/ItemType/HBoxContainer"]
margin_left = 134.0
margin_right = 220.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 19 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 37 )
custom_styles/normal = ExtResource( 20 )
text = "Gameplay"

[node name="Combat" type="Button" parent="ItemPanel/ItemType/HBoxContainer"]
margin_left = 270.0
margin_right = 339.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 19 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 37 )
custom_styles/normal = ExtResource( 20 )
text = "Combat"

[node name="Fun" type="Button" parent="ItemPanel/ItemType/HBoxContainer"]
margin_left = 389.0
margin_right = 422.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 19 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 37 )
custom_styles/normal = ExtResource( 20 )
text = "Fun"

[node name="Experimental" type="Button" parent="ItemPanel/ItemType/HBoxContainer"]
margin_left = 472.0
margin_right = 586.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 19 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 37 )
custom_styles/normal = ExtResource( 20 )
text = "Experimental"

[connection signal="pressed" from="LevelSelector/MarginContainer/VBoxContainer/Up" to="LevelSelector" method="_on_Up_pressed"]
[connection signal="pressed" from="LevelSelector/MarginContainer/VBoxContainer/Down" to="LevelSelector" method="_on_Down_pressed"]
[connection signal="mouse_entered" from="ItemPanel/GridContainer/Item" to="ItemPanel/GridContainer/Item" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemPanel/GridContainer/Item" to="ItemPanel/GridContainer/Item" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ItemPanel/GridContainer/Item2" to="ItemPanel/GridContainer/Item2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemPanel/GridContainer/Item2" to="ItemPanel/GridContainer/Item2" method="_on_mouse_exited"]
[connection signal="pressed" from="ItemPanel/GridContainer/Item2" to="ItemSelected" method="_on_Item_pressed" binds= [ "res://Entities/Editor/SelectedView/Platform.tscn", "Platform" ]]
[connection signal="mouse_entered" from="ItemPanel/GridContainer/Item3" to="ItemPanel/GridContainer/Item3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemPanel/GridContainer/Item3" to="ItemPanel/GridContainer/Item3" method="_on_mouse_exited"]
[connection signal="pressed" from="ItemPanel/GridContainer/Item3" to="ItemSelected" method="_on_Item_pressed" binds= [ "res://Entities/Editor/SelectedView/Iceman.tscn", "Iceman" ]]
